--- a/index.html
+++ b/index.html
@@ -272,11 +272,13 @@
   </template>
   <script src="js/randoms.js"></script>
   <script src="js/util.js"></script>
+  <script src="js/make-pins.js"></script>
   <script src="js/error.js"></script>
   <script src="js/backend.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/form.js"></script>
 </body>
 </html>
